# recordorai-installer

./: .gitignore  INSTALL.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: licensing.md  packaging.md
packaging/: build_sidecar.py  build_updater_manifest.py  entrypoint.py  inject_signing_config.py  recordorai-install.spec
src/recordorai_installer/: __init__.py  __main__.py  cli.py  version.py
src/recordorai_installer/adapters/: __init__.py  alice_runtime.py  base.py  hermes.py  openclaw.py  pi_mono.py  standalone.py
src/recordorai_installer/core/: __init__.py  detect.py  exec_.py  license.py  plan.py
src/recordorai_installer/core/license_clients/: __init__.py  generic.py  keygen.py  lemonsqueezy.py
src/recordorai_installer/rpc/: __init__.py  server.py
src/recordorai_installer/tui/: __init__.py  app.py  app.tcss  state.py
src/recordorai_installer/tui/screens/: __init__.py  edition.py  features.py  review.py  runtime.py  welcome.py
tauri-app/: .gitignore  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
tauri-app/src/: app.html
tauri-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: README.md  icon.icns
tauri-app/src-tauri/src/: main.rs  rpc.rs
tauri-app/src/lib/: rpc.ts  types.ts  wizard.ts
tauri-app/src/routes/: +layout.svelte  +page.svelte  styles.css
tauri-app/src/routes/configure/: +page.svelte
tauri-app/src/routes/install/: +page.svelte
tests/: conftest.py  test_adapters.py  test_cli.py  test_detect.py  test_exec.py  test_license.py  test_license_clients.py  test_plan.py  test_rpc.py
