[project]
name = "recordorai-installer"
version = "0.1.0"
description = "Cross-platform installer + integration wizard for RecordorAI"
authors = [{ name = "RecordorAI", email = "noreply@recordorai.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

# Core deps — kept minimal so the installer itself is fast to install.
# Heavy parser/model deps belong to the *target* recordorai install,
# not to this installer package.
dependencies = [
    "textual>=0.50.0",          # TUI front-end
    "rich>=13.0.0",             # textual transitive, also used directly for fallback prints
    "httpx>=0.26.0",            # license API + model downloads
    "platformdirs>=4.0.0",      # OS-aware config / cache paths
    "tomli>=2.0.0; python_version<'3.11'",  # stdlib tomllib on 3.11+
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4.0",
]
# Tauri front-end build artifacts live in a sibling `tauri-app/` and
# don't depend on this Python package directly. The Tauri side
# spawns this package via `python -m recordorai_installer rpc` and
# talks JSON-RPC over stdio.
rpc = [
    "jsonrpcserver>=5.0.0",
]

[project.scripts]
recordorai-install = "recordorai_installer.cli:main"

[project.urls]
Homepage = "https://recordorai.com"
Repository = "https://github.com/RecordorAI/recordorai-installer"
Issues = "https://github.com/RecordorAI/recordorai-installer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recordorai_installer"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["dist", "build", "tauri-app"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length is enforced by `ruff format`

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
